--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Famms</h1>
+        <ul>
+            <li>Home</li>
+            <li>Pages</li>
+            <li>Products</li>
+            <li>Blog</li>
+            <li>Contact</li>
+        </ul>
+    </header>
     
 </body>
 </html>
