--- a/index.html
+++ b/index.html
@@ -6,17 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <header>
-        <h1>Famms</h1>
-        <ul>
-            <li>Home</li>
-            <li>Pages</li>
-            <li>Products</li>
-            <li>Blog</li>
-            <li>Contact</li>
-        </ul>
-    </header>
+	<body class="landing">
+
+		
+			<header>
+				<h1>Famms</h1>
+				<nav id="nav">
+					<ul>
+						<li><a href="">Home</a></li>
+						<li><a href="">Pages</a></li>
+						<li><a href="">products</a></li>
+						<li><a href="#" class="button special">Blog</a></li>
+                        <li><a href="#" class="button special">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+
+		
+			<section>
+				<h2>Sale 20% Off
+                    On Everything.</h2>
+				<p>.</p>
+				<ul>
+					<li>
+						<a href="#">Shop Now</a>
+					</li>
+				</ul>
+			</section>
+
+		
+			<section>
+				<div>
+					<header>
+						<h2>Why Shop With Us</h2>
+					</header>
+					<div>
+						<div>
+							<section>
+								<h3>Fast Deliveryr</h3>
+								<p>variations of passages of Lorem Ipsum available.</p>
+							</section>
+						</div>
+						<div>
+							<section>
+								<h3>Free Shiping</h3>
+								<p>variations of passages of Lorem Ipsum available.</p>
+							</section>
+						</div>
+						<div>
+							<section>
+								<h3>Best Quality</h3>
+								<p>variations of passages of Lorem Ipsum available.</p>
+							</section>
+						</div>
+					</div>
+				</div>
+			</section>
+
     
 </body>
 </html>
