--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 				</ul>
 			</section>
 
+			<section class="slider_section ">
+				<div class="slider_bg_box">
+				   <img src="images/slider-bg.jpg" alt=""/>
+				</div>
+
 		
 			<section id="one" class="w style1 special">
 				<div class="container">
