--- a/index.html
+++ b/index.html
@@ -9,29 +9,26 @@
 </head>
 	<body>
 
-			<section id="one" class="w style1 special">
-				<div class="container">
+			<section>
+				<div>
 					<header>
 						<h2>Why Shop With Us</h2>
 					</header>
-					<div class="row">
-						<div class="4u">
-							<section class="box" >
-                                <i class="icon big 1"></i>
+					<div>
+						<div>
+							<section>
 								<h3>Fast Deliveryr</h3>
 								<p>variations of passages of Lorem Ipsum available.</p>
 							</section>
 						</div>
-						<div class="4u">
-							<section class="box">
-                                <i class="icon big 2"></i>
+						<div>
+							<section>
 								<h3>Free Shiping</h3>
 								<p>variations of passages of Lorem Ipsum available.</p>
 							</section>
 						</div>
-						<div class="4u">
-							<section class="box">
-                                <i class="icon big 3"></i>
+						<div>
+							<section>
 								<h3>Best Quality</h3>
 								<p>variations of passages of Lorem Ipsum available.</p>
 							</section>
