--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 	<body>
@@ -17,7 +18,7 @@
 					<div>
 						<div>
 							<section>
-								<h3>Fast Deliveryr</h3>
+								<h3>Fast Delivery</h3>
 								<p>variations of passages of Lorem Ipsum available.</p>
 							</section>
 						</div>
