--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 	<body>
@@ -41,5 +42,5 @@
 		
 
 
-</body>
+    </body>
 </html>
