--- a/index.html
+++ b/index.html
@@ -16,30 +16,29 @@
 				
 			</header>
 		</div>	
-
-
+		
 		<section class="section benefits">
 			<div class="benefit-center box">
-				<div class="benefit">
-					<span class="icon"><i class="bx-purchase-tag"></i></span>
-					<h4>Fast Delivery</h4>
-					<span class="text">variations of passages of Lorem Ipsum available.</span>
-				</div>
-
-				<div class="benefit">
-					<span class="icon"><i class="bx-book-reader"></i></span>	
-					<h4>Free Shiping</h4>
-					<span class="text">variations of passages of Lorem Ipsum available.</span>
-				</div>
-
-				<div class="benefit">
-					<span class="icon"><i class="bx-book-headphone"></i></span>	
-					<h4>Best Quality</h4>
-					<span class="text">variations of passages of Lorem Ipsum available.</span>
-				</div>	
-			</div>
-		</section>
+			  <div class="benefit">
+				<span class="icon"><i class="bx bx-purchase-tag"></i></span>
+				<h4>Fast Delivery</h4>
+				<span class="text">variations of passages of Lorem Ipsum available.</span>
+			  </div>
 		
+			 
+			  <div class="benefit">
+				<span class="icon"><i class="bx bx-book-reader"></i></span>
+				<h4>Free Shiping</h4>
+				<span class="text">variations of passages of Lorem Ipsum available.</span>
+			  </div>
+		
+			  <div class="benefit">
+				<span class="icon"><i class="bx bx-headphone"></i></span>
+				<h4>Best Quality</h4>
+				<span class="text">variations of passages of Lorem Ipsum available.</span>
+			  </div>
+			</div>
+		  </section>
 
 
     </body>
