--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<section class="section benefits">
 			<div class="benefit-center box">
 			  <div class="benefit">
+				<a class="img-wrap"> <img src="images/shipped.png"> </a>  
 				<span class="icon"><i class="bx bx-purchase-tag"></i></span>
 				<h4>Fast Delivery</h4>
 				<span class="text">variations of passages of Lorem Ipsum available.</span>
@@ -31,12 +32,14 @@
 		
 			 
 			  <div class="benefit">
+				<a class="img-wrap"> <img src="images/free.png"> </a>
 				<span class="icon"><i class="bx bx-book-reader"></i></span>
 				<h4>Free Shiping</h4>
 				<span class="text">variations of passages of Lorem Ipsum available.</span>
 			  </div>
 		
 			  <div class="benefit">
+				<a class="img-wrap"> <img src="images/medal.png"> </a>  
 				<span class="icon"><i class="bx bx-headphone"></i></span>
 				<h4>Best Quality</h4>
 				<span class="text">variations of passages of Lorem Ipsum available.</span>
