contact page added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>Pages</li>
             <li>Products</li>
             <li>Blog</li>
-            <li>Contact</li>
+            <a href="./contact.html"><li>Contact</li></a>
         </ul>
     </header>
     
