--- a/index.html
+++ b/index.html
@@ -25,6 +25,22 @@
             <a href="./contact.html"><li>Contact</li></a>
         </ul>
     </header>
+
+	<div class="row">
+		<div class="col-2">
+			<h1>Sale 20% Off<br>On Everything</h1>
+			<p>Explicabo esse amet tempora quibusdam laudantium, laborum<br> 
+			   eaque magnam fugiat hic? Esse dicta aliquid error repudiandae<br>
+			   earum suscipit fugiat molestias, veniam, vel architecto veritatis<br>
+			   delectus repellat modi impedit sequi.</p>
+			   <a href="" class="btn">Shop Now &#8594;</a>
+		</div>
+		<div class="col-2">
+			<img src="images/slider-bg.jpg">
+		</div>
+	</div>
+</div>
+</div>
     
 </body>
 =======
@@ -64,11 +80,6 @@
 			  </div>
 			</div>
 		  </section>
-
-
-
-		  
-
 
 
     <!-- Optional JavaScript -->
