--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <body>
 		<div class="title-why-shop">
 			<header>
-				<h2 class="text-center">Why Shop With Us</h2>
+				<h2 class="title">Why Shop With Us</h2>
 				
 			</header>
 		</div>	
