--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<img src="images/favicon.png" width="30px" height="30px">
 			</div>
 			<div class="row">
-				<div class="col-2">
+				<div class="col-1">
 					<h1>Sale 20% Off<br>On Everything</h1>
 					<p>Explicabo esse amet tempora quibusdam laudantium, laborum<br> 
 					   eaque magnam fugiat hic? Esse dicta aliquid error repudiandae<br>
@@ -44,7 +44,7 @@
 					   delectus repellat modi impedit sequi.</p>
 					   <a href="" class="btn">Shop Now &#8594;</a>
 				</div>
-				<div class="col-2">
+				<div class="col-1">
 					<img src="images/slider-bg.jpg">
 				</div>
 			</div>
@@ -90,6 +90,22 @@
 			  </div>
 			</div>
 		  </section>
+
+		<div class="offer">
+			<div class="small-container">
+				<div class="row">
+					<div class="col-2">
+						<img src="images/arrival-bg.jpg" class="offer-img">
+					</div>
+					<div class="col-2">
+						<h1>#NewArrivals</h1>
+						<small>Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
+						 </small><br>
+						 <a href="" class="btn">Shop Now</a>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
     <!-- Optional JavaScript -->
