--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<div class="offer">
 			<div class="small-container">
 				<div class="row">
-					<div class="col-2">
+					<div class="bg">
 						<img src="images/arrival-bg.jpg" class="offer-img">
 					</div>
 					<div class="col-2">
