--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			  <div class="benefit">
 				<a class="img-wrap"> <img src="images/free.png"> </a>
 				<span class="icon"><i class="bx bx-book-reader"></i></span>
-				<h4>Free Shiping</h4>
+				<h4>Free Shipping</h4>
 				<span class="text">variations of passages of Lorem Ipsum available.</span>
 			  </div>
 		
