--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 				</div>
 				<nav>
 					<ul>
-						<li><a href="">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="">Pages</a></li>
 						<li><a href="">Products</a></li>
 						<li><a href="">Blog</a></li>
-						<li><a href="">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
 				<img src="images/favicon.png" width="30px" height="30px">
