--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					   eaque magnam fugiat hic? Esse dicta aliquid error repudiandae<br>
 					   earum suscipit fugiat molestias, veniam, vel architecto veritatis<br>
 					   delectus repellat modi impedit sequi.</p>
-					   <a href="" class="btn">Shop Now &#8594;</a>
+					   <a href="" class="btn">Shop Now</a>
 				</div>
 				<div class="col-1">
 					<img src="images/slider-bg.jpg">
@@ -83,24 +83,23 @@
         </div>
     </div>
     
-		  </section>
 
-		<div class="offer">
-			<div class="small-container">
-				<div class="row">
-					<div class="bg">
-						<img src="images/arrival-bg.jpg" class="offer-img">
-					</div>
-					<div class="col-2">
-						<h1>#NewArrivals</h1>
-						<small>Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
-						 </small><br>
-						 <a href="" class="btn">Shop Now</a>
-					</div>
+	<!----------------offer-------------------------->
+	<div class="offer">
+		<div class="small-container">
+			<div class="row">
+				<div class="col-boy">
+					<img src="images/arrival-bg.jpg" class="offer-img">
+				</div>
+				<div class="col-boy">
+					<h1>#NewArrivals</h1>
+					<small>Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
+					</small><br>
+					<a href="" class="btn">Shop Now</a>
 				</div>
 			</div>
 		</div>
-
+	</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
