--- a/index.html
+++ b/index.html
@@ -103,8 +103,17 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col-1">
-                        </div>
                     </div>
+                    <div class="footer-col-4">
+                        <h3>Follow US</h3>
+                        <ul>
+                            <li>Facebook</li>
+                            <li>Twwiter</li>
+                            <li>Instergram</li>
+                            <li>Youtube</li>
+                        </ul>
+                    </div>
+                </div>
                     
             </div>
         </div>
