--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
                         </ul>
                     </div>
                 </div>
+                <hr>
+                <p class="copyright">@copyright 2022 - Naveen</p>
                     
             </div>
         </div>
