--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1>About Us</h1>
+    <p>Our First Project</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
