offer section added

--- a/index.html
+++ b/index.html
@@ -123,6 +123,27 @@
 
 </section>
 
+
+<!---------offer------->
+
+<div class="offer">
+   <div class="small-container">
+       <div class="row">
+           <div class="col-boy">
+               <img src="images/arrival-bg.jpg" class="offer-img">
+           </div>
+           <div class="col-boy">
+               <h1>#NewArrivals</h1>
+               <small>Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
+                </small><br>
+                <a href="" class="btn">Shop Now</a>
+           </div>
+       </div>
+   </div>
+</div>
+
+
+
 <!-- footer section  -->
 
 <section class="footer">
