--- a/about.html
+++ b/about.html
@@ -14,6 +14,18 @@
     <h1>About Us</h1>
     <p>Our First Project</p>
 
+    <section>
+
+
+
+    </section>
+
+
+
+
+
+    
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
