--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>store</title>
+    <title>Famms</title>
 </head>
 
 <body>
@@ -29,10 +29,11 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">home</a>
+      <a href="home.html">Home</a>
+      <a href="home.html">Pages</a>
       <a href="about.html">about</a>
-      <a href="courses.html">courses</a>
-      <a href="contact.html">contact</a>
+      <a href="courses.html">Blog</a>
+      <a href="contact.html">Contact</a>
    </nav>
 
    <div class="icons">
