--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 
 
-    <!----------index html code ------------->
+    <!-----------index html code ------------->
 
 
 <!---------------header------------------>
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<!---------------------small-container----------------------------------------->
+<!-------------------------------small-container----------------------------------------->
 <div class="testimonial">
     <div class="small-container">
         <h2 class="title">Why Shop With Us</h2>
@@ -82,7 +82,7 @@
 
     
 
- <!----------------offer-------------------------->
+ <!--------------------offer-------------------------->
     <div class="offer">
         <div class="small-container">
             <div class="row">
@@ -99,7 +99,7 @@
         </div>
     </div>
         
-<!----------------footer-------------------------->    
+<!---------------------footer-------------------------->    
     <div class="footer">
         <div class="container">
             <div class="row">
