--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
          <section class="swiper-slide slide" style="background: url(images/slider-bg.jpg) no-repeat;">
             <div class="content">
-               <h3>Sale 20% Off On Everything</h3>
+               <h3><span id="content-color">Sale 20% Off</span><br>on Everything</h3>
                <p>Explicabo esse amet tempora quibusdam laudantium, laborum<br> 
                   eaque magnam fugiat hic? Esse dicta aliquid error repudiandae<br>
                   earum suscipit fugiat molestias, veniam, vel architecto veritatis<br>
