--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
       <div class="box">
          <h3> <i class=""></i> Famms </h3>
-         <p>ADDRESS: 28 White tower, Street Name New York City, USA</p>
-         <p>TELEPHONE: +91 987 654 3210</p>
-         <p>EMAIL: yourmain@gmail.com</p>
+         <p><span id="footer-address">ADDRESS:</span> 28 White tower, Street Name New York City, USA</p>
+         <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
+         <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
       </div>
 
       <div class="box">
