--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 
 
 <!---------offer------->
-
-<div class="offer">
+<!--
+<div class="container">
    <div class="small-container">
        <div class="row">
-           <div class="col-boy">
-               <img src="images/arrival-bg.jpg" class="offer-img">
+           <div class="item">
+               <img src="images/arrival-bg.jpg" class="bg_img">
            </div>
            <div class="col-boy">
                <h1>#NewArrivals</h1>
@@ -118,6 +118,8 @@
        </div>
    </div>
 </div>
+-->
+
 
 
 
