--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </div>
 -->
 
-
+<!---------offer--------->
  <section class="arrival_section">
    <div class="container">
       <div class="box">
@@ -133,6 +133,11 @@
       </div>
    </div>
 </section>
+
+
+<!------------------------------->
+
+
 
 <!------ footer section  -------->
 
