--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
                <p style="margin-top: 20px;margin-bottom: 30px;">
                   Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
                </p>
-               <a href="">
-               Shop Now
-               </a>
+               <a href="#" class="btn">Shop Now</a>
             </div>
          </div>
       </div>
