Customer's Testimonial added

--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
 </section>
 
 
-<!------------------------------->
+<!------------Customer's Testimonial------------------->
 
-
+<div>   
+   <h1 class="heading">Customer's Testimonial</h1>
+</div>
 
 <!------ footer section  -------->
 
