--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
    </div>
 </div>
 
+<div class="small-container">
+   <h2 class="title">Our Products</h2>
+   <div class="row">
+       <div class="col-4">
+           <img src="images/p1.png">
+           <h4>Red Printed T-Shirt</h4>
+           
+           <p>$50.00</p>
+       </div>
+
 <!------ footer section  -------->
 
 <section class="footer">
