--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
    <div class="container">
       <div class="box">
          <div class="arrival_bg_box">
-            <img src="images" alt="">
+            <img src="images/arrival-bg.png" alt="" class="arrival_bg">
          </div>
          <div class="row">
             <div class="col-md-6 ml-auto">
