--- a/about.html
+++ b/about.html
@@ -16,8 +16,10 @@
     <p>Our First Project</p>
 
     <section>
-      <div>
-        
+      <div class="containe-1">
+        <div class="row">
+          
+        </div>
       </div>
 
 
