btn & #NewArrivals change

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                   eaque magnam fugiat hic? Esse dicta aliquid error repudiandae<br>
                   earum suscipit fugiat molestias, veniam, vel architecto veritatis<br>
                   delectus repellat modi impedit sequi.</p>
-               <a href="#" class="btn">Shop Now</a>
+               <a href="#" class="btn">
+                  <h4>Shop Now</h4>
+               </a>
             </div>
          </section>
       </div>
@@ -122,10 +124,12 @@
                      #NewArrivals
                   </h2>
                </div>
-               <p style="margin-top: 20px;margin-bottom: 30px;">
+               <p style="margin-top: 20px;margin-bottom: 2px;">
                   Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
                </p>
-               <a href="#" class="btn">Shop Now</a>
+               <a href="#" class="btn">
+                  <h3>Shop Now</h3>
+               </a>
             </div>
          </div>
       </div>
