Line 3 cloths added

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 -->
 
 <!---------offer--------->
- <section class="arrival_section">
+<section class="arrival_section">
    <div class="container">
       <div class="box">
          <div class="arrival_bg_box">
@@ -188,8 +188,29 @@
             </div>
          </div>
    
-   <!------Line 2 cloths--------->
+   <!------Line 3 cloths--------->
+         <div class="small-container">
+            <div class="row">
 
+               <div class="col-4">
+                  <img src="images/p1.png">
+                  <h4>Women's Dress</h4>
+                  <p>$70</p>
+               </div>
+
+               <div class="col-4">
+                  <img src="images/p2.png">
+                  <h4>Women's Dress</h4>
+                  <p>$75</p>
+               </div>
+               
+               <div class="col-4">
+                  <img src="images/p3.png">
+                  <h4>Women's Dress</h4>
+                  <p>$58</p>
+               </div>
+            </div>
+         </div>
 
          
 <!------------Customer's Testimonial------------------->
