Subscribe To Get Discount Offers update

--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
 
 <!------------Subscribe section------------------->
 <section class="arrival_section">
-   <div class="container">
+   <div class="container-1">
       <div class="box">
-         <div class="row">
-            <div class="col-md-6 ml-auto">
+         <div class="row-1">
+            <div class="col-md-6">
                <div class="heading_container remove_line_bt">
                   <h2>
                      Subscribe To Get Discount Offers
@@ -255,9 +255,11 @@
                <p style="margin-top: 20px;margin-bottom: 2px;">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                </p>
-               <a href="#" class="btn">
-                  <h3>Subscribe</h3>
-               </a>
+               <div class="btn-view">
+                  <a href="#" class="btn">
+                     <h3>Subscribe</h3>
+                  </a>
+               </div>
             </div>
          </div>
       </div>
