--- a/index.html
+++ b/index.html
@@ -272,13 +272,14 @@
 <div class="">
    <div>   
       <h1 class="heading">Customer's Testimonial</h1>
+      
    </div>
 </div>
 
 
 
 
-<!------ footer section  -------->
+<!------ footer section---------->
 
 <section class="footer">
 
