--- a/index.html
+++ b/index.html
@@ -252,9 +252,10 @@
          
 <!------------Customer's Testimonial------------------->
 <div class="">
-   <div>   
-      <h1 class="heading">Customer's Testimonial</h1>
-      
+   <div class="">
+      <div class="">
+         <h1 class="heading">Customer's Testimonial</h1>
+      </div>   
    </div>
 </div>
 
