client-pic added

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                </p>
                <div class="btn-view">
-                  <a href="#" class="btn">
+                  <a href="#" class="Subscribe-btn">
                      <h3>Subscribe</h3>
                   </a>
                </div>
@@ -255,6 +255,9 @@
    <div class="">
       <div class="">
          <h1 class="heading">Customer's Testimonial</h1>
+         <div class="">
+            <img src="images/client.jpg" alt="" class="client-pic">
+         </div>
       </div>   
    </div>
 </div>
