--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
          
 <!------------Customer's Testimonial------------------->
-<div class="">
+<div class="Testimonial">
    <div class="">
       <div class="">
          <h1 class="heading">Customer's Testimonial</h1>
