--- a/about.html
+++ b/about.html
@@ -4,27 +4,41 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>About</title>
   </head>
-  <body>
+<body>
+
+    <!-- header section starts  -->
+
+<header class="header">
+
+  <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
+
+  <nav class="navbar">
+     <div id="close-navbar" class="fas fa-times"></div>
+     <a href="home.html">Home</a>
+     <a href="home.html">Pages</a>
+     <a href="about.html">about</a>
+     <a href="courses.html">Blog</a>
+     <a href="contact.html">Contact</a>
+  </nav>
+
+  <div class="icons">
+     <div id="account-btn" class="fas fa-user"></div>
+     <div id="menu-btn" class="fas fa-bars"></div>
+  </div>
+
+</header>
+
+
+
     
-    <h1>About Us</h1>
-    <p>Our First Project</p>
 
-    <section>
-      <div class="containe-1">
-        <div class="row">
-          
-        </div>
-      </div>
-
-
-
-    </section>
 
 
 
@@ -42,5 +56,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
 </html>
