--- a/about.html
+++ b/about.html
@@ -1,37 +1,45 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- font awesome cdn link  -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>About</title>
-  </head>
+</head>
+
 <body>
 
-    <!-- header section starts  -->
+<!-- header section starts  -->
 
 <header class="header">
 
-  <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
+   <a href="#" class="logo"><img src="images/logo.png" width="200px"></a>
 
-  <nav class="navbar">
-     <div id="close-navbar" class="fas fa-times"></div>
-     <a href="home.html">Home</a>
-     <a href="home.html">Pages</a>
-     <a href="about.html">about</a>
-     <a href="courses.html">Blog</a>
-     <a href="contact.html">Contact</a>
-  </nav>
+   <nav class="navbar">
+      <div id="close-navbar" class="fas fa-times"></div>
+      <a href="home.html">Home</a>
+      <a href="home.html">Pages</a>
+      <a href="about.html">about</a>
+      <a href="courses.html">Blog</a>
+      <a href="contact.html">Contact</a>
+   </nav>
 
-  <div class="icons">
-     <div id="account-btn" class="fas fa-user"></div>
-     <div id="menu-btn" class="fas fa-bars"></div>
-  </div>
+   <div class="icons">
+      <div id="account-btn" class="fas fa-user"></div>
+      <div id="menu-btn" class="fas fa-bars"></div>
+   </div>
 
 </header>
 
