subjects section added

--- a/about.html
+++ b/about.html
@@ -52,6 +52,35 @@
 
 
 
+<!-- subjects section  -->
+
+<section class="subjects">
+  <h1 class="heading">Why Shop With Us</h1>
+  <div class="box-container">
+     <div class="box">
+        <img src="images/free.png" alt="">
+        <h3>Fast Delivery</h3>
+        <p>variations of passages of Lorem<br> Ipsum available.</p>
+     </div>
+
+     <div class="box">
+        <img src="images/shipped.png" alt="">
+        <h3>Free Shipping</h3>
+        <p>variations of passages of Lorem<br> Ipsum available.</p>
+     </div>
+
+     <div class="box">
+        <img src="images/medal.png" alt="">
+        <h3>Best Quality</h3>
+        <p>variations of passages of Lorem<br> Ipsum available.</p>
+     </div>
+  </div>
+</section>
+
+
+
+
+
     
 
     <!-- Optional JavaScript; choose one of the two! -->
