--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>About</title>
+    <title>About us</title>
 </head>
 
 <body>
@@ -45,7 +45,7 @@
 
 
 
-    
+<!-------------Red_Box----------------->
 
 
 
