--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">Home</a>
-      <a href="home.html">Pages</a>
+      <a href="index.html">Home</a>
+      <a href="#">Pages</a>
       <a href="about.html">about</a>
-      <a href="courses.html">Blog</a>
+      <a href="#">Blog</a>
       <a href="contact.html">Contact</a>
    </nav>
 
@@ -280,7 +280,7 @@
 
       <div class="box">
          <h3>MENU</h3>
-         <a href="home.html" class="link">home</a>
+         <a href="index.html" class="link">home</a>
          <a href="about.html" class="link">about</a>
          <a href="courses.html" class="link">Services</a>
          <a href="contact.html" class="link">Testimonial</a>
