About us page update

--- a/about.html
+++ b/about.html
@@ -47,7 +47,11 @@
 
 <!-------------Red_Box----------------->
 
-
+<div class="containerRedBox">
+   <span class="text">
+      About us
+   </span>
+</div>
 
 
 
