--- a/about.html
+++ b/about.html
@@ -29,11 +29,11 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="home.html">Home</a>
-      <a href="home.html">Pages</a>
+      <a href="index.html">Home</a>
       <a href="about.html">about</a>
-      <a href="courses.html">Blog</a>
-      <a href="contact.html">Contact</a>
+      <a href="#">Pages</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
    </nav>
 
    <div class="icons">
@@ -48,7 +48,7 @@
 <!-------------Red_Box----------------->
 
 <div class="containerRedBox">
-   <span class="text">
+   <span class="textRedBox">
       About us
    </span>
 </div>
@@ -110,6 +110,56 @@
         </div>
      </div>
   </div>
+</section>
+
+
+
+<!------ footer section---------->
+
+<section class="footer">
+
+   <div class="box-container">
+
+      <div class="box">
+         <h3> <i class=""></i> Famms </h3>
+         <p><span id="footer-address">ADDRESS:</span> 28 White tower, Street Name New York City, USA</p>
+         <p><span id="footer-address">TELEPHONE:</span> +91 987 654 3210</p>
+         <p><span id="footer-address">EMAIL:</span> yourmain@gmail.com</p>
+      </div>
+
+      <div class="box">
+         <h3>MENU</h3>
+         <a href="index.html" class="link">home</a>
+         <a href="about.html" class="link">about</a>
+         <a href="courses.html" class="link">Services</a>
+         <a href="contact.html" class="link">Testimonial</a>
+         <a href="contact.html" class="link">Blog</a>
+         <a href="contact.html" class="link">contact</a>
+      </div>
+
+      <div class="box">
+         <h3>ACCOUNT</h3>
+         <a href="#" class="link">Account</a>
+         <a href="#" class="link">Chechout</a>
+         <a href="#" class="link">Login</a>
+         <a href="#" class="link">Register</a>
+         <a href="#" class="link">Shopping</a>
+         <a href="#" class="link">Widget</a>
+      </div>
+
+      <div class="box">
+         <h3>NEWSLETTER</h3>
+         <p>Subscribe by our newsletter and get update protidin.</p>
+         <form action="">
+            <input type="email" name="" placeholder="enter your email" id="" class="email">
+            <input type="submit" value="subscribe" class="btn">
+         </form>
+      </div>
+
+   </div>
+
+   <div class="credit"> 2022 <span>@</span> | all rights reserved! </div>
+
 </section>
 
 
