--- a/Home.html
+++ b/Home.html
@@ -29,10 +29,10 @@
 
    <nav class="navbar">
       <div id="close-navbar" class="fas fa-times"></div>
-      <a href="index.html">Home</a>
+      <a href="Home.html">Home</a>
       <a href="about.html">about</a>
       <a href="#">Pages</a>
-      <a href="#">Blog</a>
+      <a href="Blog.html">Blog</a>
       <a href="contact.html">Contact</a>
    </nav>
 
