arrival_section added

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     </div>
  
  </header>
- 
+
 <!-------------Red_Box----------------->
 
 <div class="containerRedBox">
@@ -41,6 +41,35 @@
 
 
 
+
+
+
+
+<!---------offer--------->
+<section class="arrival_section">
+    <div class="container">
+       <div class="box">
+          <div class="arrival_bg_box">
+             <img src="images/arrival-bg.png" alt="" class="arrival_bg">
+          </div>
+          <div class="row">
+             <div class="col-md-6 ml-auto">
+                <div class="heading_container remove_line_bt">
+                   <h2>
+                      #NewArrivals
+                   </h2>
+                </div>
+                <p style="margin-top: 20px;margin-bottom: 2px;">
+                   Vitae fugiat laboriosam officia perferendis provident aliquid voluptatibus dolorem, fugit ullam sit earum id eaque nisi hic? Tenetur commodi, nisi rem vel, ea eaque ab ipsa, autem similique ex unde!
+                </p>
+                <a href="#" class="btn">
+                   <h3>Shop Now</h3>
+                </a>
+             </div>
+          </div>
+       </div>
+    </div>
+  </section>
 
 
 </body>
