--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
  
     <nav class="navbar">
        <div id="close-navbar" class="fas fa-times"></div>
-       <a href="index.html">Home</a>
+       <a href="Home.html">Home</a>
        <a href="about.html">about</a>
        <a href="#">Pages</a>
        <a href="#">Blog</a>
