--- a/Blog.html
+++ b/Blog.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact us</title>
+    <title>Blog</title>
 </head>
 <body>
 
@@ -30,6 +30,14 @@
     </div>
  
  </header>
+
+ <!-------------Red_Box----------------->
+
+<div class="containerRedBox">
+    <span class="textRedBox">
+        Blog List
+    </span>
+ </div>
 
 
 
