--- a/Blog.html
+++ b/Blog.html
@@ -21,7 +21,7 @@
        <a href="about.html">about</a>
        <a href="#">Pages</a>
        <a href="#">Blog</a>
-       <a href="#">Contact</a>
+       <a href="contact.html">Contact</a>
     </nav>
  
     <div class="icons">
