--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
        <a href="Home.html">Home</a>
        <a href="about.html">about</a>
        <a href="#">Pages</a>
-       <a href="#">Blog</a>
-       <a href="#">Contact</a>
+       <a href="Blog.html">Blog</a>
+       <a href="contact.html">Contact</a>
     </nav>
  
     <div class="icons">
