img_testimonial change

--- a/Home.html
+++ b/Home.html
@@ -249,7 +249,7 @@
    <div class="">
       <div class="">
          <h1 class="heading">Customer's Testimonial</h1>
-         <div class="">
+         <div class="img_testimonial">
             <img src="images/client.jpg" alt="" class="client-pic">
          </div>
       </div>   
