img_testimonial change

--- a/Home.html
+++ b/Home.html
@@ -250,7 +250,7 @@
       <div class="">
          <h1 class="heading">Customer's Testimonial</h1>
          <div class="img_testimonial">
-            <img src="images/client.jpg" alt="" class="client-pic">
+            <img src="images/client.jpg" alt="" class="client-pic" style="width:18%">
          </div>
       </div>   
    </div>
